...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/card_number_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_top_border"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/card_number_hint"
                        android:inputType="number"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/expiry_date_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/input_field_bottom_left_border"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/mm_yy"
...
                        android:padding="15dp"
                        android:textColorHint="@color/black_text_30"
                        android:textSize="14sp"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/cvv_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/input_field_bottom_right_border"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/cvv"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_field_border">

                <EditText
                    android:id="@+id/full_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@color/transparent"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/full_name_on_card"
...
                android:text="Please enter a valid card holder name"
                android:textColor="@color/error_DD4D42"
                android:textFontWeight="500"
                android:visibility="gone" />

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/continue_btn"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                android:background="@drawable/primary_button_background"-->
            <!--                android:gravity="center"-->
            <!--                android:minHeight="48dp"-->
...
