...
                android:background="@drawable/input_field_border"
                android:elevation="8dp"
                android:minHeight="100dp"
                app:cardCornerRadius="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/payment_option_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="5"
                    tools:listitem="@layout/payment_item_layout" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
...
